fix mobile horizontal overflow

--- a/docs/assets/css/mobile-responsive.css
+++ b/docs/assets/css/mobile-responsive.css
@@ -5,8 +5,16 @@
 
 /* Hidden checkbox for state management */
 .sidebar-toggle-checkbox {
-  position: absolute;
-  left: -9999px;
+  position: fixed;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  overflow: hidden;
+  white-space: nowrap;
   opacity: 0;
 }
 
